<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.detail.DetailFragment"
    android:paddingHorizontal="@dimen/padding_normal"
    android:paddingTop="@dimen/padding_normal">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/iv_avatar_detail"
        android:layout_width="@dimen/img_size"
        android:layout_height="@dimen/img_size"
        android:src="@color/is_loading"
        android:visibility="gone"
        tools:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_name"
        style="@style/TextAppearance.MaterialComponents.Headline6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/padding_normal"
        android:ellipsize="end"
        android:textStyle="bold"
        android:visibility="gone"
        tools:visibility="visible"
        android:layout_marginEnd="100dp"
        app:layout_constrainedWidth="true"
        app:layout_constraintStart_toEndOf="@+id/iv_avatar_detail"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Name" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:visibility="gone"
        tools:visibility="visible"
        app:layout_constrainedWidth="true"
        android:layout_marginHorizontal="@dimen/padding_small"
        app:layout_constraintBaseline_toBaselineOf="@id/tv_name"
        app:layout_constraintStart_toEndOf="@+id/tv_name"
        tools:text="Type" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_bio"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_small"
        app:layout_constrainedWidth="true"
        android:visibility="gone"
        tools:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tv_name"
        app:layout_constraintTop_toBottomOf="@+id/tv_name"
        tools:text="Bio" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_follower"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_small"
        app:layout_constrainedWidth="true"
        android:visibility="gone"
        tools:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tv_bio"
        app:layout_constraintTop_toBottomOf="@+id/tv_bio"
        android:drawableStart="@drawable/ic_people"
        android:includeFontPadding="false"
        android:gravity="center_vertical"
        android:drawablePadding="@dimen/padding_small"
        tools:text="Follower" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_location"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_small"
        android:visibility="gone"
        tools:visibility="visible"
        app:layout_constrainedWidth="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tv_follower"
        app:layout_constraintTop_toBottomOf="@+id/tv_follower"
        android:drawableStart="@drawable/ic_location"
        android:includeFontPadding="false"
        android:gravity="center_vertical"
        android:drawablePadding="@dimen/padding_small"
        tools:text="Location" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_small"
        android:visibility="gone"
        tools:visibility="visible"
        app:layout_constrainedWidth="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tv_location"
        app:layout_constraintTop_toBottomOf="@+id/tv_location"
        android:drawableStart="@drawable/ic_email"
        android:includeFontPadding="false"
        android:gravity="center_vertical"
        android:drawablePadding="@dimen/padding_small"
        tools:text="Email" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_repository"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="gone"
        tools:visibility="visible"
        tools:listitem="@layout/item_user_repository"
        android:layout_marginTop="@dimen/padding_normal"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_email" />

    <ProgressBar
        android:id="@+id/progress_bar_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <include
        android:id="@+id/view_detail_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        layout="@layout/layout_error"
        android:visibility="gone"
        tools:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <include
        android:id="@+id/view_repository_error"
        layout="@layout/layout_error"
        android:visibility="gone"
        tools:visibility="visible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_email" />

    <include
        android:id="@+id/view_repository_empty"
        layout="@layout/layout_data_empty"
        android:visibility="gone"
        tools:visibility="visible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_email" />

</androidx.constraintlayout.widget.ConstraintLayout>